# swc-jsx-auto-test-id

./: Cargo.toml  LICENSE  README.md  package.json
.cargo/: config.toml
.github/workflows/: publish.yml
src/: config.rs  lib.rs  tests.rs  visitor.rs
